Elimated margin issues causing white spaces

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,10 @@ p, h1, h2, div {
     color: white;
 }
 
+body {
+    margin: 0;
+}
+
 h1 {
     color: green;
     font-size: 20px;
@@ -35,7 +39,7 @@ img#titleImage {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 p {
@@ -67,8 +71,10 @@ p#tinyText {
 .navBar .navTitle{
     height:100%;
     display: flex;
+    margin: auto;
     align-items: center;
     background-color: skyblue;
+    width: 10em;
 }
 
 .navBar h1 {
